# llm-fact-checker

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-airflow.txt
dags/: fact_checker_dag.py
data/: eval_claims.csv
db/: init.sql
docs/: manual-qa-reports.md  phase-1-ingestion.md  phase-2-rag-pipeline.md  phase-3-evaluation.md  phase-4-ui-monitoring.md
eval/: compare_retrieval.py  ragas_eval.py
ingest/: build_vector_store.py  fetch_fred.py  fetch_secedgar.py  fetch_wikipedia.py  fetch_worldbank.py  http.py
notebooks/: phase1_ingestion.ipynb  phase2_claim_extraction.ipynb  phase2_rag_pipeline.ipynb  phase3_evaluation.ipynb
pages/: 1_Monitoring.py
src/: api.py  chunking.py  claim_extractor.py  config.py  db.py  embeddings.py  llm.py  monitoring.py  query_rewrite.py  rerank.py  verifier.py
tests/: test_chunking.py
