[project]
name = "llm-fact-checker"
version = "0.1.0"
description = "Business Report Fact-Checker — RAG system that verifies claims against public financial/economic sources (LLM Zoomcamp capstone)"
requires-python = ">=3.11"
dependencies = [
    "dlt[postgres]>=1.4.0",
    "psycopg2-binary>=2.9.12",
    "pgvector>=0.3.6",
    "sentence-transformers>=5.5.0",
    "wikipedia>=1.4.0",
    "requests>=2.32.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
