[project]
name = "llm-fact-checker"
version = "0.1.0"
description = "Business Report Fact-Checker — RAG system that verifies claims against public financial/economic sources (LLM Zoomcamp capstone)"
requires-python = ">=3.11"
dependencies = [
    "dlt[postgres]>=1.4.0",
    "psycopg2-binary>=2.9.12",
    "pgvector>=0.3.6",
    "sentence-transformers>=5.5.0",
    "torch",
    "requests>=2.32.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "minsearch>=0.2.0",
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "ragas>=0.4.3",
    # ragas 0.4.3 imports langchain_community.chat_models.vertexai unconditionally;
    # that module was removed in langchain-community>=0.4 (moved to
    # langchain-google-vertexai), which breaks `import ragas` outright.
    "langchain-community<0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
